--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -8,8 +8,8 @@
     width: 60px;
     aspect-ratio: 1;
     border-radius: 50%;
-    border: 8px solid theme('colors.primary.900');
-    border-right-color: theme('colors.primary.200');
+    border: 8px solid theme("colors.primary.900");
+    border-right-color: theme("colors.primary.200");
     animation: rotate 1s infinite linear;
   }
 
@@ -18,7 +18,7 @@
     width: 20px;
     aspect-ratio: 1;
     border-radius: 50%;
-    border: 2px solid theme('colors.primary.200');
+    border: 2px solid theme("colors.primary.200");
     border-right-color: transparent;
     animation: rotate 1s infinite linear;
   }
@@ -31,9 +31,14 @@
 }
 
 /* For data picker */
-.rdp {
-  --rdp-cell-size: 32px !important;
-  --rdp-accent-color: theme('colors.accent.500') !important;
-  --rdp-background-color: theme('colors.accent.600') !important;
+.rdp-root {
+  --rdp-day-height: 2rem !important; /* The height of the day cells. */
+  --rdp-day-width: 2rem !important; /* The width of the day cells. */
+  --rdp-accent-color: theme("colors.accent.500") !important;
+  --rdp-background-color: theme("colors.accent.600") !important;
+  --rdp-font-family: inherit !important;
+  --rdp-range_middle-background-color: theme(
+    "colors.accent.600"
+  ) !important; /* The color of the background for days in the middle of a range. */
   margin: 0 !important;
 }
